--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "web-vitals": "^2.1.2",
-    "node-fetch": "^3.1.0"
+    "api": "^4.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
