--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,10 @@ jobs:
   netlify-deploy-preview:
     executor:
       name: node/default
+    environment:
+      REVISION_NO: <<pipeline.git.revision>>
+      PREVIEW_URL: "https://deploy-preview-${CIRCLE_PR_NUMBER}--test-automation-sandbox.netlify.app/"
+      MABL_RESULT_URL: "https://app.mabl.com/workspaces/-/output/deployments"
     steps:
       - checkout
       - node/with-cache:
@@ -31,13 +35,20 @@ jobs:
       name: node/default
     steps:
       - deploy:
-          name: call mabl Deployment API Event
+          name: Call mabl Deployment API Event
           command: |
             curl -s "https://api.mabl.com/events/deployment" \
               -u "key:${MABL_API_KEY}" \
               -H "Content-Type:application/json" \
-              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://61c72a21fa1ce466f1596b4c--test-automation-sandbox.netlify.app/\"},\"revision\":\"{{ .Revision }}\"}"
-
+              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"$PREVIEW_URL\"},\"revision\":\"$REVISION_NO\"}"
+  notify-slack:
+    executor:
+      name: node/default
+    steps:
+      - deploy:
+          name: Post message to slack
+          command: |
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview: $PREVIEW_URL, Mabl: $MABL_RESULT_URL"}' $SLACK_HOOK_URL
 workflows:
   netlify-deploy-workflow:
     jobs:
@@ -55,4 +66,8 @@ workflows:
       - run-mabl-test:
           requires:
               - netlify-deploy-preview
-              - netlify-deploy-
+              - netlify-deploy-production
+      
+      - notify-slack:
+          requires:
+              - run-mabl-test
