--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,8 +7,6 @@ jobs:
       name: node/default
     environment:
       REVISION_NO: <<pipeline.git.revision>>
-      PREVIEW_URL: "https://deploy-preview-${CIRCLE_PR_NUMBER}--test-automation-sandbox.netlify.app/"
-      MABL_RESULT_URL: "https://app.mabl.com/workspaces/-/output/deployments"
     steps:
       - checkout
       - node/with-cache:
@@ -40,7 +38,7 @@ jobs:
             curl -s "https://api.mabl.com/events/deployment" \
               -u "key:${MABL_API_KEY}" \
               -H "Content-Type:application/json" \
-              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"$PREVIEW_URL\"},\"revision\":\"$REVISION_NO\"}"
+              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://deploy-preview-${CIRCLE_PR_NUMBER}--test-automation-sandbox.netlify.app/\"},\"revision\":\"$CIRCLE_SHA1\"}"
   notify-slack:
     executor:
       name: node/default
@@ -48,7 +46,7 @@ jobs:
       - deploy:
           name: Post message to slack
           command: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview: $PREVIEW_URL, Mabl: $MABL_RESULT_URL"}' $SLACK_HOOK_URL
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview: https://deploy-preview-${CIRCLE_PR_NUMBER}--test-automation-sandbox.netlify.app/, Mabl: https://app.mabl.com/workspaces/-/output/deployments"}' $SLACK_HOOK_URL
 workflows:
   netlify-deploy-workflow:
     jobs:
