update revision env variables

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
   run-mabl-test:
     executor:
       name: node/default
+    environment:
+      REVISION: ${CIRCLE_PULL_REQUEST##*/}
     steps:
       - deploy:
           name: Call mabl Deployment API Event
@@ -38,15 +40,17 @@ jobs:
             curl -s "https://api.mabl.com/events/deployment" \
               -u "key:${MABL_API_KEY}" \
               -H "Content-Type:application/json" \
-              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://deploy-preview-${CIRCLE_PULL_REQUEST##*/}--test-automation-sandbox.netlify.app/\"},\"revision\":\"$CIRCLE_SHA1\"}"
+              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://deploy-preview-${REVISION}--test-automation-sandbox.netlify.app/\"},\"revision\":\"${CIRCLE_SHA1}\"}"
   notify-slack:
     executor:
       name: node/default
+    environment:
+      REVISION: ${CIRCLE_PULL_REQUEST##*/}
     steps:
       - deploy:
           name: Post message to slack
           command: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-$${CIRCLE_PULL_REQUEST##*/}--test-automation-sandbox.netlify.app/, Mabl test result: https://app.mabl.com/workspaces/-/output/deployments"}' $SLACK_HOOK_URL
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-$${REVISION}--test-automation-sandbox.netlify.app/, Mabl test result: https://app.mabl.com/workspaces/-/output/deployments"}' ${SLACK_HOOK_URL}
 
 workflows:
   netlify-deploy-workflow:
