--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - deploy:
           name: Post message to slack
           command: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-$${REVISION}--test-automation-sandbox.netlify.app/, Mabl test result: https://app.mabl.com/workspaces/-/output/deployments"}' ${SLACK_HOOK_URL}
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-${REVISION}--test-automation-sandbox.netlify.app/, Mabl test is running: https://app.mabl.com/workspaces/-/output/deployments"}' ${SLACK_HOOK_URL}
 
 workflows:
   netlify-deploy-workflow:
