--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,7 +37,8 @@ jobs:
       - run:
           name: "Setup PR_NUMBER from ${CIRCLE_PULL_REQUEST}"
           command: |
-            echo 'export PR_NUMBER=${CIRCLE_PULL_REQUEST##*/}' >> $BASH_ENV
+            PR_NUMBER=`echo ${CIRCLE_PULL_REQUEST} | grep -oP '\d+$'`
+            echo "export PR_NUMBER=$PR_NUMBER" >> $BASH_ENV
       - run:
           name: Call mabl Deployment API Event
           command: |
@@ -52,11 +53,12 @@ jobs:
       - run:
           name: "Setup PR_NUMBER from ${CIRCLE_PULL_REQUEST}"
           command: |
-            echo 'export PR_NUMBER=${CIRCLE_PULL_REQUEST##*/}' >> $BASH_ENV
+            PR_NUMBER=`echo ${CIRCLE_PULL_REQUEST} | grep -oP '\d+$'`
+            echo "export PR_NUMBER=$PR_NUMBER" >> $BASH_ENV
       - run:
           name: Post message to slack
           command: |
-            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-${PR_NUMBER}--test-automation-sandbox.netlify.app/, Mabl test is running: https://app.mabl.com/workspaces/-/output/deployments"}' ${SLACK_HOOK_URL}
+            curl -X POST -H 'Content-type: application/json' --data '{"text":"All done. Preview URL: https://deploy-preview-${PR_NUMBER}--test-automation-sandbox.netlify.app/, mabl test is running: https://app.mabl.com/workspaces/-/output/deployments"}' ${SLACK_HOOK_URL}
 
 workflows:
   netlify-deploy-workflow:
