add debug command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -40,6 +40,10 @@ jobs:
             PR_NUMBER=`echo ${CIRCLE_PULL_REQUEST} | grep -oP '\d+$'`
             echo "export PR_NUMBER=$PR_NUMBER" >> $BASH_ENV
       - run:
+          name: "Echo"
+          command: |
+            echo "$PR_NUMBER"
+      - run:
           name: Call mabl Deployment API Event
           command: |
             curl -s "https://api.mabl.com/events/deployment" \
