--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
             curl -s "https://api.mabl.com/events/deployment" \
               -u "key:${MABL_API_KEY}" \
               -H "Content-Type:application/json" \
-              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://deploy-preview-${PR_NUMBER}--test-automation-sandbox.netlify.app/\"},\"revision\":\"${CIRCLE_SHA1}\"},\"plan_labels\":[\"Preview\"]"
+              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_labels\":[\"Preview\"],\"plan_overrides\":{\"web_url\":\"https://deploy-preview-${PR_NUMBER}--test-automation-sandbox.netlify.app/\"},\"revision\":\"${CIRCLE_SHA1}\"}"
 
   run-mabl-test-production:
     executor:
@@ -54,19 +54,12 @@ jobs:
       REVISION: ${CIRCLE_PULL_REQUEST##*/}
     steps:
       - run:
-          # PR番号をここで取得する
-          # NetlifyのPreview環境はPRごとのURLになる。例： https://deploy-preview-${PR_NUMBER}--test-automation-sandbox.netlify.app/ 
-          name: "Setup PR_NUMBER from ${CIRCLE_PULL_REQUEST}"
-          command: |
-            PR_NUMBER=`echo ${CIRCLE_PULL_REQUEST} | grep -oP '\d+$'`
-            echo "export PR_NUMBER=$PR_NUMBER" >> $BASH_ENV
-      - run:
           name: Call mabl Deployment API Event for Production
           command: |
             curl -s "https://api.mabl.com/events/deployment" \
               -u "key:${MABL_API_KEY}" \
               -H "Content-Type:application/json" \
-              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_overrides\":{\"web_url\":\"https://test-automation-sandbox.netlify.app/\"},\"revision\":\"${CIRCLE_SHA1}\"},\"plan_labels\":[\"Production\"]"
+              -d "{\"environment_id\":\"bIIfJiJ4lefJcKozgmNBPw-e\",\"application_id\":\"Kew3dKp0yhv4MDOPXGNu7w-a\",\"plan_labels\":[\"Production\"],\"plan_overrides\":{\"web_url\":\"https://test-automation-sandbox.netlify.app/\"},\"revision\":\"${CIRCLE_SHA1}\"}"
 
   notify-slack-preview:
     executor:
